--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title> My Aquatic World (Zoe's Version)</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap">
         <style>
             body {
                 font-family: "Sofia", sans-serif;
@@ -15,6 +16,10 @@
 
             h1 {
                 font-family: "Sofia", sans-serif;
+            }
+
+            p, ul {
+                font-family: "Open Sans", sans-serif;
             }
         </style>
     </head>
