--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section>
             <h2>Underwater Fact About Me</h2>
             <p>
-                When I was 7, I dreamed of becoming a mermaid like the ones in H2O: Just Add Water. To this day I'd still love to swim with a tail!
+                When I was 7, I dreamed of becoming a mermaid like the ones in H2O: Just Add Water. To this day I'd love to swim with a mermaid tail!
             </p>
         </section> 
         <section>
@@ -65,10 +65,21 @@
                     <img src="gilmoregirls show.jpg" alt="Gilmore Girls TV Show cover"/>
                     <p>Favorite Show (Fall-wise): Gilmore Girls</p>
                 </div>
+                <div class="seaviews-card">
+                    <img src="taylorswift icon.jpg" alt="Taylor Swift Red 2012 picture with camera in hand"/>
+                    <p>Favorite Artist: Taylor Swift</p>
+                </div>
+                <div class="seaviews-card">
+                    <img src="5sos icon.jpg" alt="5 Seconds of Summer red carpet picture"/>
+                    <p>Favorite Band: 5 Seconds of Summer</p>
+                </div>
+                <div>
+                    <img src="pinkbible nkjv.jpg" alt="Pink Bible New King James Version"/>
+                    <img src=""
+                </div>
             </div>
             <ul>
                 <li>Favorite Artists: Taylor Swift, 5 Seconds of Summer, SZA, Harry Styles</li>
-                <li>Favorite Movie: Spider-Man: Into the Spider-Verse</li>
                 <li>Favorite Books: The Bible (NKJV) & One of Us is Lying</li>
             </ul>
         </section>
